--- a/wesley-common/src/main/resources/application.yml
+++ b/wesley-common/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 8080
 
+logging:
+  level:
+    root: INFO
+
 eureka:
   instance:
     instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
