--- a/wesley-common/pom.xml
+++ b/wesley-common/pom.xml
@@ -2,16 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>wesley-cloud-common</artifactId>
+    <description>通用工具</description>
+
     <parent>
         <artifactId>wesley-cloud-parent</artifactId>
         <groupId>org.wesley.cloud</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-RC</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
-    <artifactId>wesley-cloud-common</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <description>通用工具</description>
 
 </project>
