--- a/wesley-eureka/pom.xml
+++ b/wesley-eureka/pom.xml
@@ -4,21 +4,15 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.wesley.cloud</groupId>
-    <artifactId>wesley-cloud-eureka</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
-    <properties>
-        <java.version>1.8</java.version>
-        <maven.compiler.source>${java.version}</maven.compiler.source>
-        <maven.compiler.target>${java.version}</maven.compiler.target>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+    <artifactId>eureka</artifactId>
+    <name>eureka</name>
+    <description>服务发现</description>
+    <packaging>jar</packaging>
 
     <parent>
         <groupId>org.wesley.cloud</groupId>
         <artifactId>wesley-cloud-parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0.0-RC</version>
     </parent>
 
     <dependencies>
