--- a/wesley-zuul/pom.xml
+++ b/wesley-zuul/pom.xml
@@ -2,22 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>wesley-cloud-parent</artifactId>
-        <groupId>org.wesley.cloud</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
 
-    <name>服务网关</name>
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>wesley-cloud-zuul</artifactId>
+
+    <name>zuul</name>
     <description>
         服务网关是微服务架构中一个不可或缺的部分。通过服务网关统一向外系统提供REST API的过程中，
         除了具备服务路由、均衡负载功能之外，它还具备了权限控制等功能
     </description>
 
-    <groupId>org.wesley.cloud</groupId>
-    <artifactId>wesley-cloud-zuul</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <parent>
+        <artifactId>wesley-cloud-parent</artifactId>
+        <groupId>org.wesley.cloud</groupId>
+        <version>1.0.0-RC</version>
+    </parent>
 
     <dependencies>
         <dependency>
