--- a/wesley-common/src/main/resources/application.yml
+++ b/wesley-common/src/main/resources/application.yml
@@ -7,10 +7,15 @@ logging:
 
 eureka:
   instance:
-    instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
+    prefer-ip-address: true
+    instance-id: ${spring.cloud.client.ipAddress}:${server.port}:${random.value}
+    # 续约更新时间间隔（默认30秒）
+    lease-renewal-interval-in-seconds: 10
+    # 续约到期时间（默认90秒）
+    lease-expiration-duration-in-seconds: 30
   client:
     serviceUrl:
-      defaultZone: http://10.100.152.53:8761/eureka/
+      defaultZone: http://192.168.0.110:8761/eureka/
 
 spring:
   application:
