--- a/wesley-common/pom.xml
+++ b/wesley-common/pom.xml
@@ -4,7 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>wesley-cloud-common</artifactId>
+    <artifactId>common</artifactId>
+    <packaging>jar</packaging>
+    <name>common</name>
     <description>通用工具</description>
 
     <parent>
@@ -13,4 +15,10 @@
         <version>1.0.0-RC</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+    </dependencies>
 </project>
