--- a/wesley-eureka/src/main/resources/application.yml
+++ b/wesley-eureka/src/main/resources/application.yml
@@ -4,12 +4,14 @@ server:
 eureka:
   instance:
     hostname: localhost
-    instanceId: ${vcap.application.instance_id}:${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     #禁用eureka注册自己作为客户端
     registerWithEureka: false
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
-#  server:
-#    waitTimeInMsWhenSyncEmpty: 0
+  server:
+    #设为false，关闭自我保护
+    enable-self-preservation: false
+    # 清理间隔（单位毫秒，默认是60*1000）
+    eviction-interval-timer-in-ms: 5000
