--- a/demo-eureka/pom.xml
+++ b/demo-eureka/pom.xml
@@ -4,23 +4,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>eureka</artifactId>
-    <name>eureka</name>
-    <description>服务发现</description>
+    <artifactId>demo-eureka</artifactId>
+    <name>${artifactId}</name>
+    <description>服务注册与发现</description>
     <packaging>jar</packaging>
 
     <parent>
-        <groupId>org.wesley.cloud</groupId>
-        <artifactId>wesley-cloud-parent</artifactId>
-        <version>1.0.0-RC</version>
+	    <groupId>com.wesley.study</groupId>
+	    <artifactId>demo-springcloud-parent</artifactId>
+	    <version>2.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.cloud</groupId>
