--- a/eureka-consumer/pom.xml
+++ b/eureka-consumer/pom.xml
@@ -4,21 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>common</artifactId>
+    <artifactId>eureka-consumer</artifactId>
+    <name>${artifactId}</name>
     <packaging>jar</packaging>
-    <name>common</name>
-    <description>通用工具</description>
 
     <parent>
-        <artifactId>wesley-cloud-parent</artifactId>
-        <groupId>org.wesley.cloud</groupId>
-        <version>1.0.0-RC</version>
+        <groupId>com.wesley.study</groupId>
+        <artifactId>demo-springcloud-parent</artifactId>
+        <version>2.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-ribbon</artifactId>
         </dependency>
     </dependencies>
 </project>
