--- a/demo-fegin/src/main/resources/application.yml
+++ b/demo-fegin/src/main/resources/application.yml
@@ -6,8 +6,8 @@ eureka:
     instanceId: ${spring.application.name}:${spring.application.instance_id:${random.value}}
   client:
     serviceUrl:
-      defaultZone: http://10.100.152.53:8761/eureka/
+      defaultZone: http://192.168.101.190:8761/eureka/
 
 spring:
   application:
-    name: wesley-fegin
+    name: demo-springcloud-fegin
