--- a/demo-zuul/pom.xml
+++ b/demo-zuul/pom.xml
@@ -13,9 +13,9 @@
     </description>
 
     <parent>
-        <artifactId>wesley-cloud-parent</artifactId>
-        <groupId>org.wesley.cloud</groupId>
-        <version>1.0.0-RC</version>
+        <groupId>com.wesley.study</groupId>
+        <artifactId>demo-springcloud-parent</artifactId>
+        <version>2.0-SNAPSHOT</version>
     </parent>
 
     <dependencies>
