--- a/eureka-server/src/docker/Dockerfile
+++ b/eureka-server/src/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM java:8u111-jdk-alpine
 
 MAINTAINER "wangp_yong@163.com"
 
-COPY demo-eureka.jar /eureka.jar
+COPY eureka-server.jar /eureka.jar
 
 EXPOSE 8761
 
