--- a/eureka-client/src/main/resources/application.properties
+++ b/eureka-client/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=eureka-client
 server.port=2001
 
-eureka.client.serviceUrl.defaultZone=http://192.168.2.151:8761/eureka/
-#eureka.client.serviceUrl.defaultZone=http://peer1:1001/eureka/,http://peer2:1002/eureka/
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 logging.file=${spring.application.name}.log
 
