--- a/pom.xml
+++ b/pom.xml
@@ -3,16 +3,21 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <groupId>com.wesley.study</groupId>
-    <artifactId>demo-springcloud-parent</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <artifactId>demo-micro-service</artifactId>
+    <version>3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.13.RELEASE</version>
+        <version>2.0.9.RELEASE</version>
     </parent>
+
+    <modules>
+        <module>wesley-modules</module>
+    </modules>
 
     <properties>
         <java.version>1.8</java.version>
@@ -21,12 +26,4 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
 </project>
