--- a/wesley-api/pom.xml
+++ b/wesley-api/pom.xml
@@ -2,19 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <modules>
-        <module>user-thrift-biz</module>
-    </modules>
-
     <parent>
         <artifactId>demo-micro-service</artifactId>
         <groupId>com.wesley.study</groupId>
         <version>3.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>wesley-modules</artifactId>
+    <artifactId>wesley-api</artifactId>
     <packaging>pom</packaging>
+    <modules>
+        <module>user-thrift-api</module>
+    </modules>
 
 
 </project>
