--- a/wesley-api/user-thrift-api/pom.xml
+++ b/wesley-api/user-thrift-api/pom.xml
@@ -2,19 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <modules>
-        <module>user-thrift-biz</module>
-    </modules>
-
     <parent>
-        <artifactId>demo-micro-service</artifactId>
+        <artifactId>wesley-api</artifactId>
         <groupId>com.wesley.study</groupId>
         <version>3.0-SNAPSHOT</version>
     </parent>
+    <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>wesley-modules</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>user-thrift-api</artifactId>
 
 
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.13.0</version>
+        </dependency>
+    </dependencies>
 </project>
