--- a/wesley-modules/user-thrift-biz/pom.xml
+++ b/wesley-modules/user-thrift-biz/pom.xml
@@ -12,5 +12,18 @@
     <artifactId>user-thrift-biz</artifactId>
     <description>用户Thrift服务 Demo</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.wesley.study</groupId>
+            <artifactId>user-thrift-api</artifactId>
+            <version>3.0-SNAPSHOT</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
