--- a/wesley-modules/pom.xml
+++ b/wesley-modules/pom.xml
@@ -5,6 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <modules>
         <module>user-thrift-biz</module>
+        <module>user-service</module>
     </modules>
 
     <parent>
