--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>wesley-modules</module>
         <module>wesley-api</module>
         <module>wesley-auth</module>
+        <module>wesley-zuul</module>
     </modules>
 
     <properties>
@@ -27,5 +28,6 @@
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
 
 </project>
