feat:基于OAuth2的登录模块

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,14 @@
 # Created by .ignore support plugin (hsz.mobi)
 
 *.log
-
-.idea
-*/target
-*.iml
-/.idea
 *.class
-target/
+*.iml
+
 .project
-.settings/
 .classpath
+.idea
+
+.idea/
+.settings/
+target/
+node_modules/
