--- a/wesley-zuul/src/main/resources/application.yml
+++ b/wesley-zuul/src/main/resources/application.yml
@@ -38,3 +38,14 @@ spring:
   jpa:
     generate-ddl: true
     show-sql: true
+
+security:
+  oauth2:
+    client:
+      # 访问 认证服务器 需要的Client身份认证信息
+      client-id: gateway
+      client-secret: "123456"
+    resource:
+      jwt:
+        # 获取认证服务器 JWT 签名密钥地址，拿到后网关则可以进行JWT的校验
+        key-uri: http://auth.imooc.com:9090/oauth/token_key
