--- a/wesley-modules/order-service/pom.xml
+++ b/wesley-modules/order-service/pom.xml
@@ -22,11 +22,10 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <!-- 认证交给网关处理 -->
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.cloud</groupId>-->
-            <!--<artifactId>spring-cloud-starter-oauth2</artifactId>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-oauth2</artifactId>
+        </dependency>
 
     </dependencies>
 
