--- a/wesley-modules/order-service/pom.xml
+++ b/wesley-modules/order-service/pom.xml
@@ -27,6 +27,12 @@
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.csp</groupId>
+            <artifactId>sentinel-core</artifactId>
+            <version>1.6.3</version>
+        </dependency>
+
     </dependencies>
 
     <dependencyManagement>
