--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.wesley.study</groupId>
-    <artifactId>demo-micro-service</artifactId>
+    <artifactId>demo-spring-cloud</artifactId>
     <version>3.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
