--- a/wesley-api/pom.xml
+++ b/wesley-api/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>demo-micro-service</artifactId>
+        <artifactId>demo-spring-cloud</artifactId>
         <groupId>com.wesley.study</groupId>
         <version>3.0-SNAPSHOT</version>
     </parent>
