--- a/eureka-consumer/src/main/resources/application.yml
+++ b/eureka-consumer/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 2101
+  port: 8888
 
 logging:
   level:
@@ -8,14 +8,14 @@ logging:
 eureka:
   instance:
     prefer-ip-address: true
-    instance-id: ${spring.cloud.client.ipAddress}:${server.port}:${random.value}
+    #instance-id: ${spring.cloud.client.ipAddress}:${server.port}:${random.value}
     # 续约更新时间间隔（默认30秒）
-    lease-renewal-interval-in-seconds: 10
+    lease-renewal-interval-in-seconds: 30
     # 续约到期时间（默认90秒）
-    lease-expiration-duration-in-seconds: 30
+    lease-expiration-duration-in-seconds: 90
   client:
     serviceUrl:
-      defaultZone: http://192.168.2.151:8761/eureka/
+      defaultZone: http://127.0.0.1:8761/eureka/
 
 spring:
   application:
