--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -4,35 +4,50 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>com.wesley.study</groupId>
     <artifactId>demo-eureka</artifactId>
-    <name>${artifactId}</name>
-    <description>服务注册与发现</description>
+    <version>4.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <parent>
-	    <groupId>com.wesley.study</groupId>
-	    <artifactId>demo-springcloud-parent</artifactId>
-	    <version>2.0-SNAPSHOT</version>
-    </parent>
+
+    <name>${artifactId}</name>
+    <description>服务注册与发现</description>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <java.complir.version>1.8</java.complir.version>
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+
+        <spring.boot.version>2.2.4.RELEASE</spring.boot.version>
+        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+    </properties>
+
+
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+        </dependency>
+    </dependencies>
 
     <dependencyManagement>
         <dependencies>
             <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Edgware.SR3</version>
+                <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-eureka-server</artifactId>
-        </dependency>
-    </dependencies>
 
     <build>
         <finalName>${project.artifactId}</finalName>
